--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@
 # Session 1 (AI Fundamentals & LLM APIs) - REQUIRED
 # ============================================================================
 
-google-generativeai>=0.3.0
+google-cloud-aiplatform>=1.26.0
+vertexai>=0.1.0
 python-dotenv>=1.0.0
 streamlit>=1.28.0
+requests>=2.31.0
 
 # ============================================================================
 # Optional: Alternative Platforms (Uncomment to use)
